tests/rosetta/transpiler/Rust/floyds-triangle.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:63:2
   |
63 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:70:2
   |
70 | };
   |  ^ help: remove this semicolon

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:42:36
   |
42 |     let mut lowerLeftCorner: i64 = (((n * (n - 1)) / 2) + 1);
   |                                    ^                       ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
42 -     let mut lowerLeftCorner: i64 = (((n * (n - 1)) / 2) + 1);
42 +     let mut lowerLeftCorner: i64 = ((n * (n - 1)) / 2) + 1;
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:48:11
   |
48 |     while (row <= n) {
   |           ^        ^
   |
help: remove these parentheses
   |
48 -     while (row <= n) {
48 +     while row <= n {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:49:21
   |
49 |         let mut w = (lastInColumn.to_string().len() as i64);
   |                     ^                                     ^
   |
help: remove these parentheses
   |
49 -         let mut w = (lastInColumn.to_string().len() as i64);
49 +         let mut w = lastInColumn.to_string().len() as i64;
   |

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:50:12
   |
50 |         if (i < lastInRow) {
   |            ^             ^
   |
help: remove these parentheses
   |
50 -         if (i < lastInRow) {
50 +         if i < lastInRow {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:52:28
   |
52 |             lastInColumn = (lastInColumn + 1);
   |                            ^                ^
   |
help: remove these parentheses
   |
52 -             lastInColumn = (lastInColumn + 1);
52 +             lastInColumn = lastInColumn + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:57:19
   |
57 |             row = (row + 1);
   |                   ^       ^
   |
help: remove these parentheses
   |
57 -             row = (row + 1);
57 +             row = row + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:58:25
   |
58 |             lastInRow = (lastInRow + row);
   |                         ^               ^
   |
help: remove these parentheses
   |
58 -             lastInRow = (lastInRow + row);
58 +             lastInRow = lastInRow + row;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:61:13
   |
61 |         i = (i + 1);
   |             ^     ^
   |
help: remove these parentheses
   |
61 -         i = (i + 1);
61 +         i = i + 1;
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:66:11
   |
66 |     while ((t.len() as i64) < w) {
   |           ^                    ^
   |
help: remove these parentheses
   |
66 -     while ((t.len() as i64) < w) {
66 +     while (t.len() as i64) < w {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:75:28
   |
75 |     let duration_us: i64 = ((_end - _start) / 1000);
   |                            ^                      ^
   |
help: remove these parentheses
   |
75 -     let duration_us: i64 = ((_end - _start) / 1000);
75 +     let duration_us: i64 = (_end - _start) / 1000;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:76:29
   |
76 |     let memory_bytes: i64 = (_end_mem - _start_mem);
   |                             ^                     ^
   |
help: remove these parentheses
   |
76 -     let memory_bytes: i64 = (_end_mem - _start_mem);
76 +     let memory_bytes: i64 = _end_mem - _start_mem;
   |

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:51:62
   |
51 |             line = format!("{}{}", format!("{}{}", line, pad(i.to_string(), w)), " ");
   |                                                          --- ^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                                          |
   |                                                          arguments to this function are incorrect
   |
note: function defined here
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:64:8
   |
64 |     fn pad(s: &str, mut w: i64) -> String {
   |        ^^^ -------
help: consider borrowing here
   |
51 |             line = format!("{}{}", format!("{}{}", line, pad(&i.to_string(), w)), " ");
   |                                                              +

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:54:46
   |
54 |             line = format!("{}{}", line, pad(i.to_string(), w));
   |                                          --- ^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                          |
   |                                          arguments to this function are incorrect
   |
note: function defined here
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:64:8
   |
64 |     fn pad(s: &str, mut w: i64) -> String {
   |        ^^^ -------
help: consider borrowing here
   |
54 |             line = format!("{}{}", line, pad(&i.to_string(), w));
   |                                              +

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/floyds-triangle.rs:64:21
   |
64 |     fn pad(s: &str, mut w: i64) -> String {
   |                     ----^
   |                     |
   |                     help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: aborting due to 2 previous errors; 14 warnings emitted

For more information about this error, try `rustc --explain E0308`.
